Fix dropdown alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,11 +6,6 @@
     color: #ffffffd5;
 }
 
-/* 
-button {
-    cursor: pointer;
-} */
-
 .navbar {
     display: flex;
     align-items: center;
@@ -52,7 +47,6 @@ button {
 
 .navbar .navbar-text {
     background: none;
-    /* margin-right: 20px; */
     user-select: none;
 }
 
@@ -185,7 +179,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 20px;
+    margin-left: 20px;
     background: none;
     cursor: pointer;
     position: relative;
@@ -230,32 +224,47 @@ button {
 .profile-dropdown {
     position: absolute;
     top: 50px;
-    right: -32px;
-    /* width: 100px; */
+    right: 0px;
     width: max-content;
-    border-radius: 5px;
+    border-radius: 12px;
     background: #3a3a3c;
 }
 
 .profile-dropdown-item {
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 10px 10px;
-    border-radius: 5px;
+    justify-content: left;
+    padding: 10px 15px;
+}
+
+.profile-dropdown-item.logout {
+    border-top: 1px solid #ffffff26;
 }
 
 .profile-dropdown-item.logout:hover {
     background-color: #75757648;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
+
+.profile-wrapper {
+    height: 45px;
+    width: 45px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+}
+
+.profile-wrapper.active {
+    background-color: #ffffff1a;
+    border-radius: 6px;
 }
 
 .profile-pic {
-    border-radius: 100%;
-    height: 40px;
-    width: 40px;
-    /* margin: 0 10px 0 0; */
-    cursor: pointer;
-    user-select: none;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
 }
 
 .loader {
